--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,17 @@
-node/**
-node_tmp/**
-node_modules/**
-target/
+.idea/
+node/
+node_tmp/
+node_modules/
 out/
-.idea/**
+src/main/webapp/vendor/
+src/main/webapp/bower_components/
+target/
+typings/
 *.iml
 *.iws
 *.ipr
 *.ids
 *.orig
 atlassian-ide-plugin.xml
-/.project
+.project
 npm-debug.log
-/log/**
-target/
-/src/main/webapp/vendor/
-src/main/webapp/bower_components/
