--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "bootstrap": "^3.3.6"
   },
   "devDependencies": {
-    "browser-sync": "^2.16.0",
+    "browser-sync": "^2.16.0",              // proxies live changes (very sexy)
     "del": "^2.2.2",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.4.1",
@@ -63,8 +63,8 @@
     "gulp-natural-sort": "^0.1.1",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-ng-constant": "^2.0.0-2",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
+    "gulp-notify": "^2.2.0",                // used for error notifications to the OS
+    "gulp-plumber": "^1.1.0",               // error handler
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-rev": "^7.1.2",
