--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "author": {
     "name": "John Strickler",
-    "email": "",
+    "email": "strickjb@gmail.com",
     "url": "https://github.com/johnstrickler"
   },
   "license": "ISC",
@@ -44,14 +44,11 @@
   "devDependencies": {
     "browser-sync": "^2.16.0",              // proxies live changes (very sexy)
     "gulp": "^3.9.1",
-    "gulp-changed": "^1.3.2",
     "gulp-inject": "^4.1.0",                // injects js/css into html placeholders
     "gulp-ng-constant": "^2.0.0-2",
     "gulp-notify": "^2.2.0",                // error notifications to the OS
     "gulp-plumber": "^1.1.0",               // error handler pipeline
     "gulp-rename": "^1.2.2",
-    "gulp-rev": "^7.1.2",
-    "gulp-rev-replace": "^0.4.3",
     "gulp-sourcemaps": "^1.6.0", // keep
     "gulp-tslint": "^6.1.1", // keep
     "gulp-typescript": "^2.13.6", // keep
