--- a/package.json
+++ b/package.json
@@ -42,16 +42,16 @@
     "bootstrap": "^3.3.6"
   },
   "devDependencies": {
-    "browser-sync": "^2.16.0",              // proxies live changes (very sexy)
+    "browser-sync": "^2.16.0",
     "gulp": "^3.9.1",
-    "gulp-inject": "^4.1.0",                // injects js/css into html placeholders
+    "gulp-inject": "^4.1.0",
     "gulp-ng-constant": "^2.0.0-2",
-    "gulp-notify": "^2.2.0",                // error notifications to the OS
-    "gulp-plumber": "^1.1.0",               // error handler pipeline
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.6.0", // keep
-    "gulp-tslint": "^6.1.1", // keep
-    "gulp-typescript": "^2.13.6", // keep
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-tslint": "^6.1.1",
+    "gulp-typescript": "^2.13.6",
     "proxy-middleware": "^0.15.0",
     "run-sequence": "^1.2.2",
     "tslint": "^3.15.1",
