--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-tslint": "^6.1.1",
     "gulp-typescript": "^2.13.6",
+    "main-bower-files": "2.13.1",
     "proxy-middleware": "^0.15.0",
+    "rename": "^1.0.3",
     "run-sequence": "^1.2.2",
     "tslint": "^3.15.1",
     "yargs": "^5.0.0"
